Explorar feature, graph pre design, and a lot of other things